Implement throwing errors for services